CoqOfSolidity/test/libsolidity/semanticTests/errors/error_static_calldata_uint_array_and_dynamic_array.v
(* Generated by coq-of-solidity *)
Require Import CoqOfSolidity.CoqOfSolidity.

(* Contract *)
Module C.
  (* Error E *)

  Definition f (α : list Value.t) : M :=
    match α with
    | [a, b] =>
      let _ :=
        M.revert (|
          M.call (|
            M.get_name (| "E" |),
            [
              M.get_name (| "a" |),
              M.get_name (| "b" |)
            ]
          |)
        |) in
      Value.Tuple []
    | _ => M.impossible "invalid number of parameters"
    end.
End C.
